--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,6 @@
             android:foregroundServiceType="camera|microphone"
             android:enabled="true"
             android:exported="false" />
-
         <activity
             android:name=".PublishActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
@@ -47,7 +46,9 @@
         </activity>
         <activity
             android:name=".PlayActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:exported="true" />
+        <activity android:name=".SettingsActivity" android:label="Settings" />
     </application>
 
 </manifest>
